# fiwa-cli

./: .gitignore  LICENSE  README.md  config.yml  main.css  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: python-package.yml
components/: __init__.py  calendar_display.py  header.py  item_input_form.py  time_display.py
database/: schema.sql
functions/: __init__.py  compute_time.py  db_faker.py  example_user_creation.py  handler.py  handler_api.py  handler_sqllite.py  loader.py
screens/: __init__.py  base.py  calendar_screen.py  dashboard.py  inputs.py  inputs_insert_expense.py  login_example.py  menu.py  project_selector.py  reports.py  settings.py  settings_label_new.py  settings_label_page.py  settings_project_modify.py  settings_project_new.py  settings_user_new.py
tests/: test_compute_time.py  test_main.py
widgets/: __init__.py  calendar.py
